--- a/app/views/lectures/new.html.erb
+++ b/app/views/lectures/new.html.erb
@@ -1,23 +1,33 @@
 <h1>Agregar Clase</h1>
 
-<div>
+<%= render "lectures/program_semester_mini_nav" %>	
+
+
+<div class="form-for-new">
 
 <%= form_for @lecture do |f| %>
+
+
+	<%= f.hidden_field :year, value: Date.today.year %>
 
 	<%= f.label :period %>
   <%= f.select(:period, [["Invierno", 1], ["Verano", 2], ["Otono", 3]]) %>
 
+  
   <%= f.label :course_id %>
+  <span class="program-field">
   <%= select(:lecture, :course_id, @courses.collect {|c| [ c.name, c.id ] }) %>
+  </span>
 
 	<%= f.label :week_day %>
 	<%= select(:lecture, :week_day, [["Lunes", 1], ["Martes", 2], ["Miercoles", 3], ["Jueves", 4], ["Viernes", 5], ["Sabado", 6]]) %>
 
 	<%= f.label :lecture_start_time %>
 	<%= f.time_select :lecture_start_time, {:minute_step => 30, ampm: true} %>
-
+  <span class="submit-field">
 	<%= f.submit %>
+	  <span>
+
 	<% end %>
 
 </div>
-
