--- a/app/views/layouts/_course_links.html.erb
+++ b/app/views/layouts/_course_links.html.erb
@@ -13,7 +13,7 @@
 <% elsif coordinator_signed_in? %> 
 
   <li> <%= link_to("Reportes", reports_path) %> </li>
-  <li> <%= link_to('Asignaturas', '#') %> </li>
+  <li> <%= link_to('Asignaturas', lectures_path) %> </li>
 
 <% else %>
 
