--- a/app/assets/stylesheets/report_index.css
+++ b/app/assets/stylesheets/report_index.css
@@ -1,10 +1,27 @@
 
 .report-index-container {
+	width: 600px;
 	position: relative;
 	top: 50px;
-	left: 120px;
+	left: 165px;
+	overflow: auto;
 }
 
-.report-list-in-index li {
-	display: block;
+.report-index-container ul {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
+
+.report-index-item {
+	float: left;
+  width: 240px;
+  margin: 1px 10px 1px 10px;
+}
+
+.report-index-item2 {
+	float: left;
+  width: 50px;
+  margin: 1px 10px 1px 10px;
+  text-align: center;
+}
+
