--- a/app/views/lectures/edit.html.erb
+++ b/app/views/lectures/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Lectures#edit</h1>
-<p>Find me in app/views/lectures/edit.html.erb</p>
+
+<h2> <%= @course.name %> </h2>
+
+<div class="lecture-description-container">
+	<dl> 
+		<dt> Programa: </dt>
+			<dd> <%= @course.program %> </dd>
+		<dt> Creditos: </dt>
+			<dd> <%= @course.credits %> </dd>
+		<dt> Horas Semanales: </dt>
+			<dd> <%= @course.duration %> </dd>
+		<dt> Area: </dt>
+			<dd> <%= @course.area %> </dd>
+		</dl>
+
+<% if @lecture.created_at.to_date === Date.today %>
+	
+	<h3> Editar Horario </h3>
+
+	<%= form_for @lecture do |f| %>
+
+		<%= f.label :week_day %>
+		<%= select(:lecture, :week_day, [["Lunes", 1], ["Martes", 2], ["Miercoles", 3], ["Jueves", 4], ["Viernes", 5], ["Sabado", 6]]) %>
+
+		<%= f.label :course_start_time %>
+		<%= f.time_select :lecture_start_time, {:minute_step => 30, ampm: true} %>
+
+
+		<%= f.submit %>
+		<%= link_to "Delete", @lecture, method: :delete%>
+	<% end %>
+<% end %>
