--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,18 @@
 
+<div class="header-top">
+
+	<div class="logo-header">
+		<img src="/assets/LogoLCI.png" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
+	</div>
+
+	<div class="flag-container">
+		<img src="/assets/CanFlag.jpg" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
+		<img src="/assets/ColFlag.jpg" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
+	</div>
+
+</div>
+
+
 <div class="navbar">
 
 	<div class="navbar-left">
