--- a/app/views/lectures/_new_mini_header.erb
+++ b/app/views/lectures/_new_mini_header.erb
@@ -5,35 +5,35 @@
 <ul>
 	<div class="programs-mini-header">
 <li class= <%= @program == 'Diseño Grafico'       ? "bold_month" : 'regular_month' %> >
-<%= link_to "Grafico",    :controller => "lectures", :action => "new", :program => "Diseño Grafico"    %> </li>
+<%= link_to "Grafico",      new_lecture_path(:program => "Diseño Grafico",       :semester => @semester) %> </li>
 <li class= <%= @program == 'Diseño de Interiores' ? "bold_month" : 'regular_month' %> >
-<%= link_to "Interiorismo", :controller => "lectures", :action => "new", :program => "Diseño de Interiores" %> </li>
+<%= link_to "Interiorismo", new_lecture_path(:program => "Diseño de Interiores", :semester => @semester) %> </li>
 <li class= <%= @program == 'Fotografia'           ? "bold_month" : 'regular_month' %> >
-<%= link_to "Fotografia", :controller => "lectures", :action => "new", :program => "Fotografia" %> </li>
+<%= link_to "Fotografia",   new_lecture_path(:program => "Fotografia",           :semester => @semester) %> </li>
 <li class= <%= @program == 'Mercadeo de la Moda'  ? "bold_month" : 'regular_month' %> >
-<%= link_to "Mercadeo",   :controller => "lectures", :action => "new", :program => "Mercadeo de la Moda"   %> </li>
+<%= link_to "Mercadeo",     new_lecture_path(:program => "Mercadeo de la Moda",  :semester => @semester) %> </li>
 <li class= <%= @program == 'Diseño de Modas'      ? "bold_month" : 'regular_month' %> >
-<%= link_to "Modas",      :controller => "lectures", :action => "new", :program => "Diseño de Modas"      %> </li>
+<%= link_to "Modas",        new_lecture_path(:program => "Diseño de Modas",      :semester => @semester) %> </li>
 
 	</div>
-</ul>
-
+</ul
 <ul>
 	<div class="programs-mini-header-months">
+
 <li class= <%= @semester == '1' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "1",   :controller => "lectures", :action => "new",  :semester => 1 , :program => @program %> </li>
+	 <%= link_to "1",   new_lecture_path(:semester => 1 , :program => @program) %> </li>
 <li class= <%= @semester == '2' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "2",   :controller => "lectures", :action => "new",  :semester => 2 , :program => @program %> </li>
+	 <%= link_to "2",   new_lecture_path(:semester => 2 , :program => @program) %> </li>
 <li class= <%= @semester == '3' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "3",   :controller => "lectures", :action => "new",  :semester => 3 , :program => @program %> </li>
-<li class= <%= @semester == '4' ? "bold_month" : 'regular_month' %> >	 
-	 <%= link_to "4",   :controller => "lectures", :action => "new",  :semester => 4 , :program => @program %> </li>
-<li class= <%= @semester == '5' ? "bold_month" : 'regular_month' %> >	 
-	 <%= link_to "5",   :controller => "lectures", :action => "new",  :semester => 5 , :program => @program %> </li>
-<li class= <%= @semester == '6' ? "bold_month" : 'regular_month' %> >	 
-	 <%= link_to "6",   :controller => "lectures", :action => "new",  :semester => 6 , :program => @program %> </li>
-<li class= <%= @semester == '7' ? "bold_month" : 'regular_month' %> >	 
-	 <%= link_to "7",   :controller => "lectures", :action => "new",  :semester => 7 , :program => @program %> </li>
+	 <%= link_to "3",   new_lecture_path(:semester => 3 , :program => @program) %> </li>
+<li class= <%= @semester == '4' ? "bold_month" : 'regular_month' %> >
+	 <%= link_to "4",   new_lecture_path(:semester => 4 , :program => @program) %> </li>
+<li class= <%= @semester == '5' ? "bold_month" : 'regular_month' %> >
+	 <%= link_to "5",   new_lecture_path(:semester => 5 , :program => @program) %> </li>
+<li class= <%= @semester == '6' ? "bold_month" : 'regular_month' %> >
+	 <%= link_to "6",   new_lecture_path(:semester => 6 , :program => @program) %> </li>
+<li class= <%= @semester == '7' ? "bold_month" : 'regular_month' %> >
+	 <%= link_to "7",   new_lecture_path(:semester => 7 , :program => @program) %> </li>
 <!-- <li class= <%= @semester == '8' ? "bold_month" : 'regular_month' %> >	 
 	 <%= link_to "8",   :controller => "lectures", :action => "new",  :semester => 8 , :program => @program %> </li>
  -->
