--- a/app/views/lectures/_report_creation_form.html.erb
+++ b/app/views/lectures/_report_creation_form.html.erb
@@ -4,7 +4,7 @@
 
 	<%= f.hidden_field :year, value: Date.today.year %>
 	<%= f.hidden_field :month_of_report, value: @month_of_report %>
-	<%= f.hidden_field :user_id, value: current_user.id %>
+	<%= f.hidden_field :user_id, value: @user.id %>
 	<%= f.hidden_field :total_hours, value: @total_hours_of_class %>
 
 	
