--- a/app/views/lectures/my_lectures.html.erb
+++ b/app/views/lectures/my_lectures.html.erb
@@ -1,14 +1,14 @@
-<h1>Mis Clases</h1>
+<h2 class="page-title">Mis Clases</h2>
 
-<ul>
 
-	<% for lecture in @lectures %>
-		<ul class="my-lectures-container">
-		<li class="my-lectures-name"> <%= link_to "#{lecture.course.name}", edit_lecture_path(lecture) %></li>
-		<li class="my-lectures"> <%= Date::DAYNAMES[lecture.week_day] %></li>
-		<li class="my-lectures"> <%= lecture.lecture_start_time.strftime("%I:%M %p") %></li>
-		</ul>
-	<% end %>
-	
-	<ul>
-
+<div class="page-content">
+	<div class="my-lectures-container">
+		<% for lecture in @lectures %>
+			<ul>
+				<li class="my-lectures-name"> <%= link_to "#{lecture.course.name}", edit_lecture_path(lecture) %></li>
+				<li class="my-lectures"> <%= Date::DAYNAMES[lecture.week_day] %></li>
+				<li class="my-lectures"> <%= lecture.lecture_start_time.strftime("%I:%M %P") %></li>
+			</ul>
+		<% end %>
+	</div>
+</div>
