--- a/app/views/reports/reports_list.html.erb
+++ b/app/views/reports/reports_list.html.erb
@@ -1,18 +1,31 @@
 
 <% if @in_or_due %> 
-<h2>Profesores Paz y Salvo <%= "#{Date::MONTHNAMES[params[:month_of_report].to_i]}"%></h2>
+<h2 class="page-title">Profesores Paz y Salvo <%= "#{Date::MONTHNAMES[params[:month_of_report].to_i]}"%></h2>
 <% else %>
-<h2>Profesores que deben Reporte <%= "#{Date::MONTHNAMES[params[:month_of_report].to_i]}"%></h2>
+<h2 class="page-title">Profesores que deben Reporte <%= "#{Date::MONTHNAMES[params[:month_of_report].to_i]}"%></h2>
 <% end %>
 
-<ul>
-<% for user in @users %>
-	<li> <%= link_to "#{user.first_name} #{user.last_name}", my_reports_lecture_path(:id => user.id) %> </li> <br />
-<% end %>
-</ul>
 
+<div class = "page-content" >
+	<div class = "my-lectures-container" >
+		<% for user in @users %>
+			<ul class = "margin-top">
+				<li > <%= link_to "#{user.first_name} #{user.last_name}", my_reports_lecture_path(:id => user.id) %> </li>
+				<li class ="reprogram-class-link italic"> <%= link_to " - Descargar", download_report_reports_path(:user_id => user.id, :month_of_report => @month) %> </li>
+			</ul>
+		<% end %>
+	</div>
+</div>
+
+
+
+
+
+
+
+<!-- # Me gustaria hacer que esto funcionara...
 <% if @in_or_due %> 
 <%= link_to "Descargar Todos", download_report_reports_path(:user_id => @users.collect{|user| user.id}, :month_of_report => params[:month_of_report]), {class: "create-report-button"}%>
 <% else %>
-
 <% end %>
+-->
