--- a/app/views/layouts/_course_links.html.erb
+++ b/app/views/layouts/_course_links.html.erb
@@ -21,7 +21,7 @@
   <%= link_to('Tutorial', '#')  %>  
   </li>
   <li>
-  <%= link_to('La Salle', '#')  %>
+  <%= link_to('Omnivox', 'https://lci-colombia.omnivox.ca/intr/Module/Identification/Login/Login.aspx?ReturnUrl=%2fintr')  %>
   </li>
 
 <% end %>
