--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
 <div class="header-top">
 
 	<div class="logo-header">
-		<img src="/assets/LogoLCI.png" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
+		<%= image_tag(image_path('LogoLCI.png')) %>
+		<!-- <img src="/assets/LogoLCI.png" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" /> -->
 	</div>
 
 	<div class="flag-container">
