--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
 <div class="header-top">
 
 	<div class="logo-header">
-		<%= image_tag(image_path('LogoLCI.png')) %>
+		<%= image_tag('LogoLCI.png') %>
 		<!-- <img src="/assets/LogoLCI.png" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" /> -->
 	</div>
 
 	<div class="flag-container">
-		<img src="/assets/CanFlag.jpg" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
-		<img src="/assets/ColFlag.jpg" alt="Logo LCI Barranquilla" title="Logo LCI Barranquilla" />
+		<%= image_tag('CanFlag.jpg') %>
+		<%= image_tag('ColFlag.jpg') %>
 	</div>
 
 </div>
