--- a/app/views/lectures/edit.html.erb
+++ b/app/views/lectures/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="page-content">
 	<div class="lecture-description-container">
 		<ul> 
-			<li> <span class=" "> Programa:        </span> <span class="bold"> <%= @course.program %>  </span> </li>
+			<li> <span class=" "> Programa:        </span> <span class="bold"> <%= @course.program.name %>  </span> </li>
 			<li> <span class=" "> Horas Semanales: </span> <span class="bold"> <%= @course.duration %> </span> </li>
 			<li> <span class=" "> Area:            </span> <span class="bold"> <%= @course.area %>     </span> </li>
 			<li> <span class=" "> Creditos:        </span> <span class="bold"> <%= @course.credits %>  </span> </li>
