--- a/app/views/lectures/_new_mini_header.erb
+++ b/app/views/lectures/_new_mini_header.erb
@@ -4,40 +4,19 @@
 <div class="programs-mini-navs">
 <ul>
 	<div class="programs-mini-header">
-<li class= <%= @program == 'Diseño Grafico'       ? "bold_month" : 'regular_month' %> >
-<%= link_to "Grafico",      new_lecture_path(:program => "Diseño Grafico",       :semester => @semester) %> </li>
-<li class= <%= @program == 'Diseño de Interiores' ? "bold_month" : 'regular_month' %> >
-<%= link_to "Interiorismo", new_lecture_path(:program => "Diseño de Interiores", :semester => @semester) %> </li>
-<li class= <%= @program == 'Fotografia'           ? "bold_month" : 'regular_month' %> >
-<%= link_to "Fotografia",   new_lecture_path(:program => "Fotografia",           :semester => @semester) %> </li>
-<li class= <%= @program == 'Mercadeo de la Moda'  ? "bold_month" : 'regular_month' %> >
-<%= link_to "Mercadeo",     new_lecture_path(:program => "Mercadeo de la Moda",  :semester => @semester) %> </li>
-<li class= <%= @program == 'Diseño de Modas'      ? "bold_month" : 'regular_month' %> >
-<%= link_to "Modas",        new_lecture_path(:program => "Diseño de Modas",      :semester => @semester) %> </li>
-
+		<% for program in @programs %>
+			<li class= <%= @program == program.id.to_s ? "bold_month" : 'regular_month' %> >
+			<%= link_to "#{program.name}", new_lecture_path(:program => program.id, :semester => @semester) %> </li>
+		<% end %>
 	</div>
 </ul
+
 <ul>
 	<div class="programs-mini-header-months">
-
-<li class= <%= @semester == '1' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "1",   new_lecture_path(:semester => 1 , :program => @program) %> </li>
-<li class= <%= @semester == '2' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "2",   new_lecture_path(:semester => 2 , :program => @program) %> </li>
-<li class= <%= @semester == '3' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "3",   new_lecture_path(:semester => 3 , :program => @program) %> </li>
-<li class= <%= @semester == '4' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "4",   new_lecture_path(:semester => 4 , :program => @program) %> </li>
-<li class= <%= @semester == '5' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "5",   new_lecture_path(:semester => 5 , :program => @program) %> </li>
-<li class= <%= @semester == '6' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "6",   new_lecture_path(:semester => 6 , :program => @program) %> </li>
-<li class= <%= @semester == '7' ? "bold_month" : 'regular_month' %> >
-	 <%= link_to "7",   new_lecture_path(:semester => 7 , :program => @program) %> </li>
-<!-- <li class= <%= @semester == '8' ? "bold_month" : 'regular_month' %> >	 
-	 <%= link_to "8",   :controller => "lectures", :action => "new",  :semester => 8 , :program => @program %> </li>
- -->
-
+		<% for semester in @semesters %>
+			<li class= <%= @semester == "#{semester}" ? "bold_month" : 'regular_month' %> >
+	 		<%= link_to "#{semester}", new_lecture_path(:semester => semester, :program => @program) %> </li>
+		<% end %>
 	</div>
 </ul>
 
