--- a/app/views/lectures/new.html.erb
+++ b/app/views/lectures/new.html.erb
@@ -16,7 +16,7 @@
 	<%= f.hidden_field :year, value: Date.today.year %>
 
 	<%= f.label :periodo %>
-  <%= f.select(:period, [["Invierno", 1], ["Verano", 2], ["Otono", 3]]) %>
+  <%= f.select(:period, [["Invierno", 1], ["Verano", 2], ["Otoño", 3]]) %>
 
   
   <%= f.label :asignatura %>
