--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,10 +4,10 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
 
-    <div><%= f.label :first_name %><br />
+    <div><%= f.label :nombre %><br />
     <%= f.text_field :first_name %></div>
 
-    <div><%= f.label :last_name %><br />
+    <div><%= f.label :apellido %><br />
     <%= f.text_field :last_name %></div>
 
     <div><%= f.label :email %><br />
@@ -17,21 +17,22 @@
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <div><%= f.label :contraseña %> <span class ="devise-shared-links">(Dejar en blanco si no la deseas cambiar)</span><br />
       <%= f.password_field :password, autocomplete: "off" %></div>
 
-    <div><%= f.label :password_confirmation %><br />
+    <div><%= f.label :confirmar_Contraseña %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-    <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <div><%= f.label :contraseña_Actual %> <span class ="devise-shared-links">(Necesitamos tu contraseña actual para guardar los cambios)</span><br />
       <%= f.password_field :current_password, autocomplete: "off" %></div>
 
-    <div><%= f.submit "Update" %></div>
+    <div><%= f.submit "Actualizar" %></div>
   <% end %>
 
-  <h3>Cancel my account</h3>
+ <!--  <h3>Cancel my account</h3>
 
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <p>Eliminar Cuenta? <%= button_to "Eliminar", registration_path(resource_name), data: { confirm: "Estas seguro?" }, method: :delete %></p>
 
-  <%= link_to "Back", :back %>
+  <%= link_to "Volver", :back %>
 </div>
+ -->
