--- a/app/views/layouts/_login_links.html.erb
+++ b/app/views/layouts/_login_links.html.erb
@@ -1,17 +1,17 @@
 <% if user_signed_in? %>
 
   <li> <%= link_to("#{current_user.first_name}", edit_user_registration_path) %> </li>
-  <li> <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
+  <li> <%= link_to('Cerrar Sesion', destroy_user_session_path, :method => :delete) %> </li>
 
 <% elsif coordinator_signed_in? %> 
 
 	<li> <%= link_to("#{current_coordinator.first_name}", edit_coordinator_registration_path) %> </li>
-  <li> <%= link_to('Logout', destroy_coordinator_session_path, :method => :delete) %> </li>
+  <li> <%= link_to('Cerrar Sesion', destroy_coordinator_session_path, :method => :delete) %> </li>
 
 <% else %>
 
-  <li> <%= link_to('Login', new_user_session_path)  %> </li>
-  <li> <%= link_to('Register', new_user_registration_path)  %> </li>
+  <li> <%= link_to('Iniciar Sesion', new_user_session_path)  %> </li>
+  <li> <%= link_to('Registro', new_user_registration_path)  %> </li>
 
 <% end %>
 
