--- a/app/views/reports/reports_list.html.erb
+++ b/app/views/reports/reports_list.html.erb
@@ -11,7 +11,9 @@
 		<% for user in @users %>
 			<ul class = "margin-top">
 				<li > <%= link_to "#{user.first_name} #{user.last_name}", my_reports_lecture_path(:id => user.id) %> </li>
-				<li class ="reprogram-class-link italic"> <%= link_to " - Descargar", download_report_reports_path(:user_id => user.id, :month_of_report => @month) %> </li>
+					<% if @in_or_due %> 
+					<li class ="reprogram-class-link italic"> <%= link_to " - Descargar", download_report_reports_path(:user_id => user.id, :month_of_report => @month) %> </li>
+					<% end %>
 			</ul>
 		<% end %>
 	</div>
