--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
 
 <div class="navbar">
 
-	<div class="navbar-left">
+	<div id="dropdown" class="navbar-left">
 		<ul>
 			<%= render 'layouts/course_links' %>
 		</ul>
