--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,4 +1,22 @@
 
+
+#dropdown ul ul {
+	display: none;
+	position: absolute;
+}
+
+#dropdown ul li:hover ul {
+	display: block;
+}
+
+#dropdown ul li:hover ul li {
+	display: block;
+	background-color: #005978;
+	padding: 10px 10px 10px 10px;
+	margin-left: 155px;
+
+}
+
 .header-top {
 	width: 960px;
 	margin: 10px;
@@ -43,7 +61,7 @@
 
 .navbar li {
 	display: inline;
-	margin-right: 20px;
+	padding-right: 20px;
 }
 
 .navbar a:link, .navbar a:visited, .navbar a:active {
