--- a/app/views/layouts/_course_links.html.erb
+++ b/app/views/layouts/_course_links.html.erb
@@ -26,7 +26,7 @@
 <% else %>
 
   <li>
-  <%= link_to('Tutorial', '#')  %>  
+  <%= link_to('Tutorial', 'https://dl.dropboxusercontent.com/u/34948257/LCIReporteDigitalTutorialLite.pdf')  %>  
   </li>
   <li>
   <%= link_to('Omnivox', 'https://lci-colombia.omnivox.ca/intr/Module/Identification/Login/Login.aspx?ReturnUrl=%2fintr')  %>
