Add Salones Stub Link

--- a/app/views/layouts/_course_links.html.erb
+++ b/app/views/layouts/_course_links.html.erb
@@ -12,6 +12,7 @@
 
 <% elsif coordinator_signed_in? %> 
 
+  <li> <%= link_to('Salones', '#') %> </li>
   <li> <%= link_to('Asignaturas', lectures_path) %> </li>
   <li> <%= link_to("Reportes", reports_path) %> </li>
   <li> <%= link_to("Indicadores", '#') %> 
